--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/MyMaterialTheme" >
+        android:theme="@style/MyMaterialTheme"
+        android:versionCode="1"
+        android:versionName="1.0.0">
+        >
         <activity android:name=".MenusActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
